[package]
name = "world-chain-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true

alloy-primitives = { workspace = true }

reth-revm.workspace = true
reth-basic-payload-builder.workspace = true
reth-chainspec.workspace = true
reth-codecs.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-node.workspace = true
reth-primitives-traits.workspace = true
reth-optimism-chainspec.workspace = true
alloy-eips.workspace = true
alloy-eip7928.workspace = true
alloy-consensus.workspace = true
alloy-evm.workspace = true
alloy-op-evm.workspace = true
alloy-network.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-serde.workspace = true
alloy-rlp.workspace = true

op-alloy-consensus.workspace = true
op-alloy-rpc-types.workspace = true
op-revm.workspace = true
reth-rpc-api.workspace = true
revm.workspace = true

blake3.workspace = true
ed25519-dalek.workspace = true
bytes.workspace = true
chrono.workspace = true
p256.workspace = true
sha2.workspace = true
base64.workspace = true

[features]
default = []
# Exposes in-memory mocks (e.g. `MockKeyringRegistry`) to downstream crates for
# integration testing.
test-utils = []

[dev-dependencies]
alloy-signer-local.workspace = true
op-alloy-network.workspace = true
