[package]
name = "world-chain-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal
world-chain-pool.workspace = true
world-chain-primitives.workspace = true

# reth
reth-chainspec.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true
reth-transaction-pool.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-api.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-storage-api.workspace = true
reth-node-builder.workspace = true
reth-tasks.workspace = true
reth-chain-state.workspace = true

# op-reth
reth-optimism-rpc.workspace = true
reth-optimism-node.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-evm.workspace = true
reth-revm.workspace = true

# alloy
alloy-op-evm.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true

op-alloy-rpc-types.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types-engine.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true
revm-database.workspace = true

# tokio
tokio.workspace = true

# misc
hex.workspace = true
serde.workspace = true
tracing.workspace = true
jsonrpsee.workspace = true
jsonrpsee-core.workspace = true
jsonrpsee-types.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
eyre.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["provider-http"] }
alloy-sol-types.workspace = true
revm-database = { workspace = true, features = ["alloydb"] }
revm-database-interface.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
