[package]
name = "world-chain-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
world-chain-primitives.workspace = true

alloy-eips.workspace = true
alloy-primitives.workspace = true

crossbeam-channel.workspace = true
dashmap.workspace = true
rayon.workspace = true
revm.workspace = true
revm-database.workspace = true
tracing.workspace = true

[dev-dependencies]
eyre.workspace = true
reth-revm.workspace = true
reth-tracing.workspace = true
serde_json.workspace = true

[lints]
workspace = true
