[package]
name = "world-chain-validator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# internal
world-chain-primitives.workspace = true
world-chain-p2p.workspace = true
world-chain-chainspec.workspace = true
world-chain-evm.workspace = true

# reth
reth-chain-state.workspace = true
reth-provider.workspace = true
reth-trie-common.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-revm.workspace = true
reth-primitives-traits.workspace = true

# op-reth
reth-optimism-node.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-evm.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eip7928.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-op-evm.workspace = true
alloy-rpc-types-engine.workspace = true

# revm
revm.workspace = true
revm-database.workspace = true

# tokio
tokio.workspace = true
tokio-stream.workspace = true

# misc
crossbeam-channel.workspace = true
parking_lot.workspace = true
tracing.workspace = true
futures.workspace = true
eyre.workspace = true
rayon.workspace = true
metrics.workspace = true
metrics-derive.workspace = true

[dev-dependencies]
world-chain-test-utils.workspace = true
world-chain-p2p = { workspace = true, features = ["test-utils"] }
world-chain-node.workspace = true
world-chain-validator.workspace = true
reth-optimism-node = { workspace = true, features = ["test-utils"] }
reth-tasks.workspace = true
eyre.workspace = true
criterion.workspace = true
alloy-rlp.workspace = true
reth-db.workspace = true
reth-db-api.workspace = true
reth-node-core.workspace = true

[[bench]]
name = "flashblock_validation_synthetic"
harness = false

[[bench]]
name = "flashblock_validation_live_node"
harness = false

[[bench]]
name = "flashblock_validation_mainnet"
harness = false

[lints]
workspace = true
