[package]
name = "world-chain-witness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-rpc-types-debug.workspace = true
parking_lot.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true

[lints]
workspace = true
