[package]
name = "world-chain-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
test-utils = [
    "alloy-genesis",
    "alloy-sol-types",
    "alloy-trie",
    "op-alloy-network",
    "lazy_static",
    "world-chain-p2p/test-utils",
]
bench = ["test-utils"]

[dependencies]
# reth
reth.workspace = true
reth-basic-payload-builder.workspace = true
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-transaction-pool.workspace = true
reth-trie-common.workspace = true
reth-payload-primitives.workspace = true
reth-payload-util.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true

# op-reth
reth-optimism-forks.workspace = true
reth-optimism-node.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-evm.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-eip7928.workspace = true
alloy-network.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-signer-local.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-op-evm.workspace = true

world-chain-cli.workspace = true
world-chain-primitives.workspace = true
world-chain-p2p.workspace = true
world-chain-pool.workspace = true
world-chain-rpc.workspace = true

# revm
revm.workspace = true
revm-database.workspace = true
revm-primitives.workspace = true

# tokio
tokio.workspace = true

# misc
crossbeam-channel.workspace = true
parking_lot.workspace = true
tracing.workspace = true
futures.workspace = true
eyre.workspace = true
rayon.workspace = true
dashmap.workspace = true
thiserror.workspace = true
either.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
serde.workspace = true
derive_more.workspace = true
semaphore-rs.workspace = true

# Optional deps for test_utils (activated by `test-utils` / `bench` features,
# or implicitly by dev-dependencies when running `cargo test`).
alloy-genesis = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }
alloy-trie = { workspace = true, optional = true }
op-alloy-network = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }

[dev-dependencies]
world-chain-builder = { path = ".", features = ["test-utils"] }
world-chain-test-utils.workspace = true
world-chain-p2p = { workspace = true, features = ["test-utils"] }
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
lazy_static.workspace = true
reth-tracing.workspace = true
tracing-subscriber.workspace = true
alloy-genesis.workspace = true
op-alloy-network.workspace = true
alloy-sol-types.workspace = true
alloy-trie.workspace = true
bon.workspace = true
criterion.workspace = true

[[bench]]
name = "coordinator"
harness = false
required-features = ["bench"]
