[package]
name = "world-chain-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# internal
world-chain-primitives.workspace = true
world-chain-p2p.workspace = true
world-chain-builder.workspace = true

# reth
reth.workspace = true
reth-basic-payload-builder.workspace = true
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-transaction-pool.workspace = true
reth-trie-common.workspace = true
reth-payload-primitives.workspace = true
reth-payload-util.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true


# op-reth
reth-optimism-forks.workspace = true
reth-optimism-node.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-evm.workspace = true

alloy-consensus.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-op-evm.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true


# revm
revm.workspace = true
revm-database.workspace = true
revm-primitives.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
futures.workspace = true
tracing.workspace = true
parking_lot.workspace = true
tokio.workspace = true
eyre.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
either.workspace = true

[lints]
workspace = true
